# Interview-Bot

./: .gitignore  DASHBOARD_FIX_NOTE.js  INDEX_WEBSITE.bat  INSTALL_REPORTLAB.bat  README.md  index_website.py  test_knowledge.py
backend/: .gitignore  limiter.py  main.py  notebook.ipynb  pyproject.toml  requirements.txt  validate_env.py  verify_setup.py
backend/connections/: model_connection.py  mongo_client.py
backend/llms/: llmFactory.py  wrapper.py
backend/models/: auth.py  schemas.py
backend/routers/: auth.py  auth_FIXED.py  bot.py  dashboard.py  main_router.py  mock.py
backend/utils/: logger.py  main_utils.py  promts.py
chatbot/: ARCHITECTURE.md  QUICKSTART.md  README.md
chatbot/backend/: .env.example  .gitignore  database.py  main.py  page_capture.py  requirements.txt  run_indexing.py  test.py  test_chatbot.py  verify_chatbot.py
chatbot/backend/langgraph_agent/: __init__.py  graph.py  knowledge_base.py  nodes.py  state.py
frontend/: .gitignore  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.js
frontend/src/: main.jsx  styles.css
frontend/src/assets/: output.json
frontend/src/components/: Chatbot.css  Chatbot.jsx  DeepgramDictaphone.jsx  DictaPhone.jsx  GuideCard.jsx  Input.jsx  Login.jsx  Modal.jsx  NotFound.jsx  PracticeButton.jsx  Protected.jsx  QuestionSection.jsx  Signup.jsx  ThemeProvider.tsx  index.js
frontend/src/conf/: conf.js
frontend/src/features/: authSlice.js  resumeSlice.js
frontend/src/hooks/: usePageContentCapture.js
frontend/src/layout/: AuthLayout.jsx  RootLayout.jsx
(+18 files in other folders)
