[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt<4",                      
    "passlib[bcrypt]==1.7.4",       
    "fastapi>=0.116.1,<0.117",
    "motor>=3.7.1,<4",
    "pyjwt>=2.10.1,<3",
    "pydantic[email]>=2.11.7,<3",
    "uvicorn>=0.35.0,<1",
    "python-multipart>=0.0.20,<1",
    "pypdf>=5.9.0,<6",
    "langchain>=0.3.27,<0.4",
    "langchain-community>=0.3.27,<0.4",
    "langchain-google-genai>=2.1.9,<3",
]

